kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-ui
  labels:
    app: product-ui
spec:
  selector:
    app: product-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
